--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="player">
         <audio id='audio' controls autoplay>
-            <source src="http://radioxibungos.ddns.net:82/" type="audio/ogg">
+            <source src="http://c13.radioboss.fm:8347/autodj" type="audio/ogg">
             Your browser does not support the audio element.
         </audio>
     </div>
