--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <br>
     <div class="player">
         <video  id="player" autoplay="false" preload="auto" controls="true" src="http://radioxibungos.ddns.net:82/" type="video/quicktime"></video>
+        <!-- <video  id="player" autoplay="false" preload="auto" controls="true" src="http://c13.radioboss.fm:8347/autodj" type="video/quicktime"></video> -->
+        
     </div>
     <br>
     <div  class="btplayer">
